Add Simple Analytics (privacy safe)

--- a/book_source/source/_templates/layout.html
+++ b/book_source/source/_templates/layout.html
@@ -3,14 +3,7 @@
 {% block extrahead %}
     {{ super() }}
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9C05EJ32PL"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-9C05EJ32PL');
-    </script>
-
+    <!-- 100% privacy friendly analytics -->
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 {% endblock %}
